--- a/css/styles.css
+++ b/css/styles.css
@@ -555,7 +555,10 @@ img {
 .buttons [type]:hover,
 .buttons [type]:focus{
     color:var(--white-color);
-    background:var(--accent-color);  
+    background:var(--accent-color); 
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12); 
 }
 
 
@@ -576,8 +579,14 @@ img {
 .projects .item{
     width: 370px;
     margin-bottom: 30px;
-    margin-right: 30px;
-    
+    margin-right: 30px; 
+}
+
+.projects .item:hover,
+.projects .item:focus{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .projects .item:nth-child(3n){
